@@ -3,6 +3,9 @@
 	* src/cerebrod/cerebrod_config.c (cerebrod_config_cleanup): Fix
 	static modules bug.
 
+	* src/cerebrod/cerebrod_config.c (_cerebrod_config_parse): Minor
+	debugging fix.
+	
 	* src/cerebrod/cerebrod_updown.c
 	(_cerebrod_updown_send_node_responses): New function.
 	
@@ -18,6 +21,9 @@
 
 	* src/cerebrod/: Globally use cerebrod_err_debug instead of
 	err_debug when appropriate.
+
+	* src/libcommon/Makefile.am, src/cerebrod/Makefile.am: Split off
+	libcommon libraries into libcommon and libwrappers.
 	
 2005-03-28  Albert Chu  <chu11@llnl.gov>
 
